--- a/app/src/main/res/layout/fragment_portfoliomgmt.xml
+++ b/app/src/main/res/layout/fragment_portfoliomgmt.xml
@@ -82,7 +82,7 @@
 
                 <Spinner
                     android:id="@+id/mptSimulation"
-                    android:layout_width="@+id/mptClearPort"
+                    android:layout_width="wrap_content"
                     android:layout_height="36dp"
                     android:layout_marginTop="5dp"
                     android:textColor="@color/colorPrimaryDark"
